syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "Identity.proto";
import "Mandants.proto";
import "NaturalPerson.proto";
import "IdentificationDocument.proto";
import "GrpcAddress.proto";
import "Contact.proto";

import "google/protobuf/wrappers.proto";


message SearchCustomerResult {
    
    repeated cis.types.Identity Identities = 1;

    NaturalPersonBaseData NaturalPerson = 2;

    IdentificationDocument IdentificationDocument = 3;
    
    string Street = 4;
   
    string Postcode = 5;

    string City = 6;

    google.protobuf.Int32Value CountryId = 7;
}

message CustomerRequest {

    cis.types.Identity Identity = 1;
}

message CustomerResponse {

    repeated cis.types.Identity Identities = 1;

    NaturalPerson NaturalPerson = 2;

    IdentificationDocument IdentificationDocument = 3;

    repeated cis.types.GrpcAddress Addresses = 4;

    repeated Contact Contacts = 5;

}

