syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message NaturalPerson {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;

   int32 GenderId = 5;

   string BirthName = 6;

   string PlaceOfBirth = 7;

   google.protobuf.Int32Value BirthCountryId = 8;

   repeated int32 CitizenshipCountriesId = 9;

   int32 MaritalStatusStateId = 10;
   
   google.protobuf.Int32Value DegreeBeforeId = 11;

   google.protobuf.Int32Value DegreeAfterId = 12;

   google.protobuf.BoolValue IsPoliticallyExposed = 13;

   int32 EducationLevelId = 14;

   bool IsBrSubscribed = 15;

   string IsLegallyIncapable = 16;

   cis.types.NullableGrpcDate LegallyIncapableUntil = 17;

   string KbRelationshipCode = 18;

   google.protobuf.Int32Value TaxResidencyCountryId = 19;

   string Segment = 20;
}

message NaturalPersonBasicInfo {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;

   int32 GenderId = 5;
}

message NaturalPersonSearch {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;
}